refactor(achievements): streamline achievement generation logic and improve code readability