@@ -166,7 +166,7 @@ public class GroupProvider extends CrudProvider<Group, Integer, GroupRepository>
         if (!groups.isEmpty()) {
             if (!groupsByLevel.get(0).isEmpty()) {
                 for (int i = level; i <= groups.get(groups.size() - 1).getLevel(); i++) {
-                    if (i > 1 || groupsByLevel.get(0).get(0).getNumberOfWinners() == 1) {
+                    if (i > 1 || groupsByLevel.get(0).getFirst().getNumberOfWinners() == 1) {
                         if (!groupsByLevel.get(i).isEmpty()) {
                             while ((groupsByLevel.get(i - 1).size() + 1) / 2 < groupsByLevel.get(i).size()) {
                                 //Delete last group.
@@ -181,7 +181,7 @@ public class GroupProvider extends CrudProvider<Group, Integer, GroupRepository>
                                 groupsByLevel.get(i).remove(groupsByLevel.get(i).size() - 1);
                             }
                         }
-                    } else if (i == 1 && groupsByLevel.get(0).get(0).getNumberOfWinners() == 2 && !groupsByLevel.get(i).isEmpty()) {
+                    } else if (i == 1 && groupsByLevel.get(0).getFirst().getNumberOfWinners() == 2 && !groupsByLevel.get(i).isEmpty()) {
                         // Decrease level one if needed.
                         while ((groupsByLevel.get(0).size() + 1) < groupsByLevel.get(1).size()) {
                             //Delete last group.
