@@ -21,7 +21,7 @@ package com.softwaremagico.kt.core.score;
  * #L%
  */
 
-
+import com.softwaremagico.kt.persistence.entities.Fight;
 import com.softwaremagico.kt.utils.NameUtils;
 
 import java.util.Comparator;
@@ -32,19 +32,22 @@ public class ScoreOfCompetitorCustom implements Comparator<ScoreOfCompetitor> {
     @Override
     public int compare(ScoreOfCompetitor scoreOfCompetitor1, ScoreOfCompetitor scoreOfCompetitor2) {
         if (!scoreOfCompetitor1.getFights().isEmpty()) {
-            if (scoreOfCompetitor1.getWonDuels() * scoreOfCompetitor1.getFights().get(0).getTournament().getTournamentScore().getPointsByVictory()
-                    + scoreOfCompetitor1.getDrawDuels()
-                    * scoreOfCompetitor1.getFights().get(0).getTournament().getTournamentScore().getPointsByDraw() > scoreOfCompetitor2.getWonDuels()
-                    * scoreOfCompetitor1.getFights().get(0).getTournament().getTournamentScore().getPointsByVictory() + scoreOfCompetitor2.getDrawDuels()
-                    * scoreOfCompetitor1.getFights().get(0).getTournament().getTournamentScore().getPointsByDraw()) {
+            final Fight firstFight = scoreOfCompetitor1.getFights().getFirst();
+            if (scoreOfCompetitor1.getWonDuels() * firstFight.getTournament().getTournamentScore().getPointsByVictory()
+                    + scoreOfCompetitor1.getDrawDuels() * firstFight.getTournament().getTournamentScore()
+                            .getPointsByDraw() > scoreOfCompetitor2.getWonDuels()
+                                    * firstFight.getTournament().getTournamentScore().getPointsByVictory()
+                                    + scoreOfCompetitor2.getDrawDuels()
+                                            * firstFight.getTournament().getTournamentScore().getPointsByDraw()) {
                 return -1;
             }
 
-            if (scoreOfCompetitor1.getWonDuels() * scoreOfCompetitor1.getFights().get(0).getTournament().getTournamentScore().getPointsByVictory()
-                    + scoreOfCompetitor1.getDrawDuels()
-                    * scoreOfCompetitor1.getFights().get(0).getTournament().getTournamentScore().getPointsByDraw() < scoreOfCompetitor2.getWonDuels()
-                    * scoreOfCompetitor1.getFights().get(0).getTournament().getTournamentScore().getPointsByVictory() + scoreOfCompetitor2.getDrawDuels()
-                    * scoreOfCompetitor1.getFights().get(0).getTournament().getTournamentScore().getPointsByDraw()) {
+            if (scoreOfCompetitor1.getWonDuels() * firstFight.getTournament().getTournamentScore().getPointsByVictory()
+                    + scoreOfCompetitor1.getDrawDuels() * firstFight.getTournament().getTournamentScore()
+                            .getPointsByDraw() < scoreOfCompetitor2.getWonDuels()
+                                    * firstFight.getTournament().getTournamentScore().getPointsByVictory()
+                                    + scoreOfCompetitor2.getDrawDuels()
+                                            * firstFight.getTournament().getTournamentScore().getPointsByDraw()) {
                 return 1;
             }
 
@@ -59,6 +62,7 @@ public class ScoreOfCompetitorCustom implements Comparator<ScoreOfCompetitor> {
         }
 
         // Same obtained score, order by name
-        return NameUtils.getLastnameName(scoreOfCompetitor1.getCompetitor()).compareTo(NameUtils.getLastnameName(scoreOfCompetitor2.getCompetitor()));
+        return NameUtils.getLastnameName(scoreOfCompetitor1.getCompetitor())
+                .compareTo(NameUtils.getLastnameName(scoreOfCompetitor2.getCompetitor()));
     }
 }
